#7 Entrega1: Ciência de Dados

--- a/documentos/Entrega01/Projeto_Interdisciplinar_Ciencia_de_Dados/Entregavel1_CienciadeDados_PI.ipynb
+++ b/documentos/Entrega01/Projeto_Interdisciplinar_Ciencia_de_Dados/Entregavel1_CienciadeDados_PI.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "H5nFLJK_dgU_",
-        "outputId": "1e303851-4d0f-40d3-afd3-57260a47652c"
+        "outputId": "86f9278f-9553-4a1a-a878-4d126a17fc59"
       },
       "outputs": [
         {
@@ -704,35 +704,32 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "print(\"--- Primeiras linhas da base de pedestres ---\")\n",
+        "print(\"Primeiras linhas da base de pedestres: \")\n",
         "print(dfPaulista[['latitude', 'longitude']].head())\n",
-        "print(\"\\n\" + \"=\"*60)\n",
-        "print(\"Gerando links de verificação para as coordenadas no Google Maps\")\n",
-        "print(\"=\"*60)\n",
-        "print(\"Clique nos links abaixo para ver onde as coordenadas realmente apontam.\")\n",
+        "print(\"\\nDemonstração de alguns dos dados incoerentes:\")\n",
         "\n",
         "for index, row in dfPaulista.head(3).iterrows():\n",
         "    lat = row['latitude']\n",
         "    lon = row['longitude']\n",
         "    url = f\"https://www.google.com/maps/search/?api=1&query={lat},{lon}\"\n",
-        "    print(f\"\\n- Amostra da Linha {index}:\")\n",
-        "    print(f\"  Coordenadas no arquivo: Latitude={lat}, Longitude={lon}\")\n",
-        "    print(f\"  Verifique no mapa: {url}\")"
+        "    print(f\"Amostra da Linha {index}:\")\n",
+        "    print(f\"Coordenadas no arquivo: Latitude={lat}, Longitude={lon}\")\n",
+        "    print(f\"Verifique no mapa: {url}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aDSmF74J7K7C",
-        "outputId": "9f8e83fe-55a0-4de8-a72c-b4bad25d8b0b"
+        "outputId": "848bef10-550e-4db9-8859-d28218d255e5"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- Primeiras linhas da base de pedestres ---\n",
+            "Primeiras linhas da base de pedestres: \n",
             "                  latitude                longitude\n",
             "0  -23.567.430.342.750.400   -4.664.844.333.528.140\n",
             "1  -23.558.687.303.969.100   -4.665.888.408.315.560\n",
@@ -740,22 +737,16 @@
             "3   -2.355.617.081.756.250   -4.666.130.627.469.660\n",
             "4   -2.356.254.630.989.870   -4.664.956.662.319.300\n",
             "\n",
-            "============================================================\n",
-            "Gerando links de verificação para as coordenadas no Google Maps\n",
-            "============================================================\n",
-            "Clique nos links abaixo para ver onde as coordenadas realmente apontam.\n",
-            "\n",
-            "- Amostra da Linha 0:\n",
-            "  Coordenadas no arquivo: Latitude=-23.567.430.342.750.400, Longitude=-4.664.844.333.528.140\n",
-            "  Verifique no mapa: https://www.google.com/maps/search/?api=1&query=-23.567.430.342.750.400,-4.664.844.333.528.140\n",
-            "\n",
-            "- Amostra da Linha 1:\n",
-            "  Coordenadas no arquivo: Latitude=-23.558.687.303.969.100, Longitude=-4.665.888.408.315.560\n",
-            "  Verifique no mapa: https://www.google.com/maps/search/?api=1&query=-23.558.687.303.969.100,-4.665.888.408.315.560\n",
-            "\n",
-            "- Amostra da Linha 2:\n",
-            "  Coordenadas no arquivo: Latitude=-23.570.847.016.535.100, Longitude=-46.645.781.836.865.100\n",
-            "  Verifique no mapa: https://www.google.com/maps/search/?api=1&query=-23.570.847.016.535.100,-46.645.781.836.865.100\n"
+            "Demonstração de alguns dos dados incoerentes:\n",
+            "Amostra da Linha 0:\n",
+            "Coordenadas no arquivo: Latitude=-23.567.430.342.750.400, Longitude=-4.664.844.333.528.140\n",
+            "Verifique no mapa: https://www.google.com/maps/search/?api=1&query=-23.567.430.342.750.400,-4.664.844.333.528.140\n",
+            "Amostra da Linha 1:\n",
+            "Coordenadas no arquivo: Latitude=-23.558.687.303.969.100, Longitude=-4.665.888.408.315.560\n",
+            "Verifique no mapa: https://www.google.com/maps/search/?api=1&query=-23.558.687.303.969.100,-4.665.888.408.315.560\n",
+            "Amostra da Linha 2:\n",
+            "Coordenadas no arquivo: Latitude=-23.570.847.016.535.100, Longitude=-46.645.781.836.865.100\n",
+            "Verifique no mapa: https://www.google.com/maps/search/?api=1&query=-23.570.847.016.535.100,-46.645.781.836.865.100\n"
           ]
         }
       ]
